testdata/baselines/reference/submodule/conformance/jsDeclarationsRestArgsWithThisTypeInJSDocFunction.errors.txt
bug38550.js(3,14): error TS2552: Cannot find name 'function'. Did you mean 'Function'?


==== bug38550.js (1 errors) ====
    export class Clazz {
      /**
       * @param {function(this:Object, ...*):*} functionDeclaration
                 ~~~~~~~~
!!! error TS2552: Cannot find name 'function'. Did you mean 'Function'?
!!! related TS2728 lib.es5.d.ts:--:--: 'Function' is declared here.
       */
      method(functionDeclaration) {}
    }
    